<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="12dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_tema"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp"
            android:paddingBottom="12dp" />

        <RadioGroup
            android:id="@+id/radioGroupTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_system"
                android:padding="12dp" />

            <RadioButton
                android:id="@+id/radioClaro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_light"
                android:padding="12dp" />

            <RadioButton
                android:id="@+id/radioOscuro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark"
                android:padding="12dp" />
        </RadioGroup>

    </LinearLayout>
</androidx.cardview.widget.CardView>
